fix compile problems in 2024.06.x